welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:7: error: ')' expected but ';' found.
}while (crossing();) {
                  ^Poucet:7: error: illegal start of statement
}while (crossing();) {
                   ^